--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 		<link rel="stylesheet" href="css/reset.css"/>
 		<link rel="stylesheet" href="css/global.css"/>
+		<link rel="stylesheet" href="css/bootstrap.css">
 	</head>
 	<body>
 		<header>
