--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="UTF-8" />
+		<meta  name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"/>
 		<title>Rdio - Luke Chesser</title>
-
-		<link rel="stylesheet" href="css/reset.css"/>
-		<link rel="stylesheet" href="css/global.css"/>
-		<link rel="stylesheet" href="css/bootstrap.css">
+		<link rel="stylesheet" href="./css/reset.css"/>
+		<link rel="stylesheet" href="./css/global.css"/>
+		<link rel="stylesheet" href="./css/bootstrap.css">
 	</head>
 	<body>
-		<header>
+		<header class="center">
 			<div class="wrapper">
 				<div class="logo-search">
 					<img class="pull-left" src="img/logo.png" />
@@ -19,11 +19,18 @@
 					<input type="submit" name="submit" value="Rechercher" class="submit">
 				</form>
 				<div class="user">
-				    <a href="#">Luke Chesser</a>
+					<label for="Luke_Chesser">
+						<select name="Luke_Chesser" id="Luke_Chesser">
+							<option value="Name">Luke Chesser</option>
+							<option value="Birthday">Birthday</option>
+							<option value="Education">Education</option>
+						</select>
+					</label>
 				</div>
 			</div>
 		</header>
-		<aside>
+		<div class="row">
+		<aside class="col-sm-3 d-none d-xl-block">
 			<h3>Browse</h3>
 			<nav class="browse">
 				<ul class="main">
@@ -42,7 +49,7 @@
 			</nav>
 		</aside>
 
-		<main>
+		<main class=" col-xl-9 col-xs-12">
 			<header>
 				<div class="name-photo">
 					<aside>
@@ -72,7 +79,7 @@
 			<div>
 				<a class="station" href="#">Start Station</a>
 			</div>
-			<section id="albums">
+			<section id="albums" class="col-xl-12 col-md-8 col-xs-12">
 				<article>
 					<figure>
 						<img src="img/album/album_01.png" />
@@ -155,5 +162,6 @@
 				</article>
 			</section>
 		</main>
+	</div>
 	</body>
 </html>
